# naia-app

./: .gitignore  README.md  app.json  gradle.properties  package-lock.json  package.json  pubspec.yaml  rust_lib_build.sh  settings.gradle.kts  tailwind.config.js
.fleet/: receipt.json
android/app/: build.gradle
app/: _layout.tsx
app/(auth)/: _layout.tsx  email.tsx  index.tsx  otp.tsx
app/(home)/: _layout.tsx  addBirthday.tsx  index.tsx  modal.tsx  profile.tsx
app/(onboarding)/: _layout.tsx  birthday.tsx  family.tsx  index.tsx
composeApp/: build.gradle.kts
contexts/: auth.tsx
ios/Runner/: AppDelegate.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: AddBdaySheet.swift  AvatarPicker.swift  BdayList.swift  BdayListHeader.swift  BdayRow.swift  BdaySheet.swift  ContentView.swift  Extensions.swift  Info.plist  RoundedButton.swift  StatRow.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  ffi.dart  main.dart  notification.ts  store.ts  supabase.ts
lib/components/: notification.component.dart
linux/: CMakeLists.txt  my_application.cc
naia_lib/: Cargo.toml
naia_lib/naia_lib.xcodeproj/: project.pbxproj
naia_lib/naia_lib.xcodeproj/xcuserdata/lnk0.xcuserdatad/xcschemes/: xcschememanagement.plist
naia_lib/src/: api.rs  bridge_generated.rs  lib.rs  main.rs
queries/: birthday.ts  profile.ts
shared/: build.gradle.kts
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+68 files in other folders)
